lx/test/fixtures/resolve/invalid/return-in-if-outside-function.lx
// Test case: Return inside if block at top level
// This should be rejected - return can only be at top-level end, not inside nested control flow

if true {
  return 1
}
